last minute changes